Route specialised searches through extensible skills